popup css fix, overflow not working corredtly

--- a/frontend/src/styles/popup.css
+++ b/frontend/src/styles/popup.css
@@ -22,7 +22,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     width: 80%;
     max-width: 800px;
-    height: 800px;
+    height: 85%;
     text-align: center;
     display: flex;
     flex-direction: column;
